# OpenGLEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  render_doc.cap  run.sh  window_settings.conf
.github/workflows/: build.yml
Application/: CMakeLists.txt
Application/include/: main.hpp  my_layer.hpp
Application/src/: main.cpp  my_layer.cpp
Assets/Shaders/: simple.frag  simple.vert
Engine/: CMakeLists.txt
Engine/implementations/glfw/: clock.cpp  glad_glfw.cpp  glfw_input.cpp  glfw_window.cpp  glfw_window.hpp
Engine/implementations/opengl/: buffer_object.cpp  buffer_object.hpp  context.cpp  context.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_array.cpp  vertex_array.hpp
Engine/implementations/tinyobjloader/: tinyobjloader.cpp
Engine/include/common/: clock.hpp  config.hpp  fs.hpp  identifiable.hpp  logger.hpp  logger_provider.hpp  logger_provider_fs_path.inl  logger_provider_vertex.inl  types.hpp  verify.hpp
Engine/include/core/: application_event.hpp  bindable.hpp  editor_events.h  event.hpp  execution_scope.hpp  input.hpp  key_code.hpp  key_event.hpp  mouse_code.hpp  mouse_event.hpp
Engine/include/errors/: graphics_exception.hpp  verification_exception.hpp
Engine/include/graphics/: buffer_object.hpp  context.hpp  graphics.hpp  mesh.hpp  shader.hpp  types.hpp  uniform_buffer.hpp  vertex_array.hpp  window.hpp
Engine/include/layer/: layer.hpp
Engine/include/processing/: background_service.hpp
Engine/include/scene/: camera.hpp  scene_camera.hpp
Engine/include/startup/: startup.hpp
Engine/src/common/: logger.cpp  logger_provider.cpp  logger_provider_fs_path.inl  verify.cpp
Engine/src/core/: input.cpp
Engine/src/graphics/: buffer_object.cpp  context.cpp  graphics.cpp  mesh.cpp  shader.cpp  uniform_buffer.cpp  vertex_array.cpp  window.cpp
Engine/src/processing/: background_service.cpp
Engine/src/scene/: scene_camera.cpp
Engine/src/startup/: startup.cpp
Modules/: CMakeLists.txt
Modules/fmt/test/gtest/gtest/: gtest.h
Modules/glad/: CMakeLists.txt  glad.c  glad.h
Modules/spdlog/include/spdlog/sinks/: mongo_sink.h
