function(add_glfw)
	set(GLFW_BUILD_EXAMPLES OFF)
	set(GLFW_BUILD_TESTS OFF)
	set(GLFW_BUILD_DOCS OFF)
	set(GLFW_INSTALL OFF)
	add_subdirectory(glfw)
endfunction()

function(add_fmt)
	set(FMT_DOC OFF)
	set(FMT_INSTALL OFF)
	set(FMT_TEST OFF)
	set(FMT_OS "Include core requiring OS (Windows/Posix) " ON)
	add_subdirectory(fmt)
endfunction()

function(add_spdlog)
	option(SPDLOG_ENABLE_PCH ON)
	option(SPDLOG_BUILD_PIC ON)
	option(SPDLOG_BUILD_EXAMPLE OFF)
	option(SPDLOG_BUILD_EXAMPLE_HO OFF)
	option(SPDLOG_INSTALL OFF)
	option(SPDLOG_FMT_EXTERNAL "Use external fmt library instead of bundled" ON)
	add_subdirectory(spdlog)
endfunction()

function(add_glm)
	add_subdirectory(glm)
endfunction()

add_glfw()
add_fmt()
add_spdlog()
add_glm()
